// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationControlButton renders correctly when variant is "next" and it is disabled 1`] = `
<div>
  <span
    aria-label="No next page"
    class=""
    data-mui-internal-clone-element="true"
  >
     
    <button
      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
      disabled=""
      tabindex="-1"
      type="button"
    >
      NavigateNextRoundedIcon Mock
    </button>
  </span>
</div>
`;

exports[`PaginationControlButton renders correctly when variant is "next" and it is not disabled 1`] = `
<div>
  <span
    aria-label="Next page"
    class=""
    data-mui-internal-clone-element="true"
  >
     
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      NavigateNextRoundedIcon Mock
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </span>
</div>
`;

exports[`PaginationControlButton renders correctly when variant is "previous" and it is disabled 1`] = `
<div>
  <span
    aria-label="No previous page"
    class=""
    data-mui-internal-clone-element="true"
  >
     
    <button
      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
      disabled=""
      tabindex="-1"
      type="button"
    >
      NavigateBeforeRoundedIcon Mock
    </button>
  </span>
</div>
`;

exports[`PaginationControlButton renders correctly when variant is "previous" and it is not disabled 1`] = `
<div>
  <span
    aria-label="Previous page"
    class=""
    data-mui-internal-clone-element="true"
  >
     
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-1pe4mpk-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      NavigateBeforeRoundedIcon Mock
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </span>
</div>
`;
